--- a/WEBSITE/website/templates/home.html
+++ b/WEBSITE/website/templates/home.html
@@ -1,7 +1,39 @@
-<!-- page extends to template.html -->
-{% extends "template.html" %} {% block title %} Home {% endblock %}
+{% extends "template.html" %} {% block title %}Home{% endblock %} {% block content
+    %}
+    <div id="Sancta Maria College Basketball" class="tabcontent"></div>
+    <h1 class="pageHeading">Basketball</h1>
+    <h3 class="subheading">Hard work beats talent when talent fails to work hard</h3>
 
-<!-- home page content-->
-{% block content %} <h1>Home</h1>
+    <html lang="en">
+        <head>
+            <meta charset="UTF-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        </head>
+        <body>
+          <!--image header-->
+            <h1>
+                <img src="static/assets/img/background.jpeg" alt="Header Photo" style="width:100%; height:auto;">
+            </h1>
+            <!--paragraphs-->
+        </body>
+          <h2 class="subheading">What is this website about</h2>
+          <p>ExampleParagraphExampleParagraphExampleParagraphExampleParagraph
+            ExampleParagraphExampleParagraphExampleParagraphExampleParagraph
+            ExampleParagraphExampleParagraphExampleParagraphExampleParagraph
+          </p>
+      
+        <h2 class="subheading">how to check your videos</h2>
+          <p>ExampleParagraphExampleParagraphExampleParagraphExampleParagraph
+            ExampleParagraphExampleParagraphExampleParagraphExampleParagraph
+            ExampleParagraphExampleParagraphExampleParagraphExampleParagraph
+          </p>
+        <h2 class="subheading">How it Works</h2>
+          <p>ExampleParagraphExampleParagraphExampleParagraphExampleParagraph
+            ExampleParagraphExampleParagraphExampleParagraphExampleParagraph
+            ExampleParagraphExampleParagraphExampleParagraphExampleParagraph
+          </p>
+              
+        
 
-{% endblock %}
+
+    {% endblock %}
