--- a/WEBSITE/website/templates/login.html
+++ b/WEBSITE/website/templates/login.html
@@ -1,27 +1,47 @@
+{% extends "template.html" %}
+{% block title %}Login{% endblock %}
 
-<!-- page extends to template.html -->
-{% extends "template.html" %} {% block title %} Login {% endblock %}
-<!-- login page content -->
 {% block content %}
-<!-- start of form -->
-<form method="POST">
-    <h3> Login </h3>
+<link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
 
-    <div class="form-group">
-        <!-- email form -->
-        <label for="email">Email Address</label>
-        <input type="email" id="email" name="email" class="form-control" placeholder="Enter Email" />
-        
-        <br />
-        <!-- password form -->
-        <label for="password">Password</label>
-        <input type="password" id="password1" name="password" class="form-control" placeholder="Enter Password" />
-        
-        <br />
-        <!-- submit button -->
-        <div align="center">
-            <button class="btn btn-primary" type="submit">Login</button>
+<div class="login-container">
+    <form method="POST">
+        <h3>Login</h3>
+
+        <div class="form-group">
+            <label for="email">Email Address</label>
+            <input
+                type="email"
+                id="email"
+                name="email"
+                class="form-control"
+                placeholder="Enter Email"
+                required
+            />
+
+            <label for="password">Password</label>
+            <input
+                type="password"
+                id="password1"
+                name="password"
+                class="form-control"
+                placeholder="Enter Password"
+                required
+            />
+
+            <!-- Forgot password link -->
+            <div class="text-right">
+                <a href="/forgot-password" class="link-small">Forgot password?</a>
+            </div>
+
+            <button class="btn btn-primary mt-3" type="submit">Login</button>
+
+            <!-- Register now prompt -->
+            <div class="text-center mt-3">
+                <span class="text-muted">Don't have an account?</span>
+                <a href="/register" class="link-bold">Register now</a>
+            </div>
         </div>
-    </div>
-</form>
+    </form>
+</div>
 {% endblock %}
