--- a/WEBSITE/website/templates/sign_up.html
+++ b/WEBSITE/website/templates/sign_up.html
@@ -1,37 +1,42 @@
 <!-- page extends to template.html -->
-{% extends "template.html" %} {% block title %} signup {% endblock %} 
-<!-- sign up page content -->
+{% extends "template.html" %}
+
+{% block title %}Signup{% endblock %}
+
 {% block content %}
-<!-- start of form -->
-<form method="POST">
-<h3> Signup </h3>
+<link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
 
-    <div class="form-group">
-        <!-- email form -->
-        <label for="email">Email Address</label>
-        <input type="email" id="email" name="email" class="form-control" placeholder="Enter Email"/>
-        <br/>
-        <!-- username form -->
-        <label for="username">Username</label>
-        <input type="text" id="username" name="username" class="form-control" placeholder="Enter Username"/>
-        <br/>
-        <!-- password1 form -->
-        <label for="password1">Password</label>
-        <input type="password" id="password1" name="password1" class="form-control" placeholder="Enter Password"/>
-        <div id="passwordHelpBlock" class="form-text">
-            Your password must be 8-20 characters long.
+<div class="signup-container">
+    <h3>Sign Up</h3>
+    <form method="POST">
+        <div class="form-group">
+            <!-- Email -->
+            <label for="email">Email Address</label>
+            <input type="email" id="email" name="email" class="form-control" placeholder="Enter your email" required />
+
+            <!-- Username -->
+            <label for="username">Username</label>
+            <input type="text" id="username" name="username" class="form-control" placeholder="Choose a username"
+                required />
+
+            <!-- Password -->
+            <label for="password1">Password</label>
+            <input type="password" id="password1" name="password1" class="form-control"
+                placeholder="Enter your password" required />
+            <div id="passwordHelpBlock" class="form-text text-muted">
+                Your password must be 8–20 characters long.
+            </div>
+
+            <!-- Confirm Password -->
+            <label for="password2">Confirm Password</label>
+            <input type="password" id="password2" name="password2" class="form-control"
+                placeholder="Re-enter your password" required />
+
+            <!-- Submit Button -->
+            <div class="mt-3" align="center">
+                <button class="btn btn-primary" type="submit">Sign Up</button>
+            </div>
         </div>
-        <br/>
-        <!-- password2 form -->
-        <label for="password2">Password</label>
-        <input type="password" id="password2" name="password2" class="form-control" placeholder="Confirm Password"/>
-        <br/>
-        <!-- submit button -->
-        <div align="center">
-            <button class="btn btn-primary" type="submit">Sign Up</button>
-        </div>
-    </div>
-
-</form>
-
+    </form>
+</div>
 {% endblock %}
