--- a/WEBSITE/website/templates/forgot_password.html
+++ b/WEBSITE/website/templates/forgot_password.html
@@ -13,14 +13,7 @@
 
         <div class="form-group">
             <label for="email">Email Address</label>
-            <input
-                type="email"
-                id="email"
-                name="email"
-                class="form-control"
-                placeholder="Enter your email"
-                required
-            />
+            <input type="email" id="email" name="email" class="form-control" placeholder="Enter your email" required />
 
             <button class="btn btn-primary mt-3" type="submit">Send Reset Link</button>
         </div>
