--- a/WEBSITE/website/templates/login.html
+++ b/WEBSITE/website/templates/login.html
@@ -1,47 +1,32 @@
+<!-- login.html -->
 {% extends "template.html" %}
+
 {% block title %}Login{% endblock %}
 
 {% block content %}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
 
 <div class="login-container">
+    <h3>Login</h3>
     <form method="POST">
-        <h3>Login</h3>
-
         <div class="form-group">
-            <label for="email">Email Address</label>
-            <input
-                type="email"
-                id="email"
-                name="email"
-                class="form-control"
-                placeholder="Enter Email"
-                required
-            />
+            <label for="identifier">Username or Email</label>
+            <input type="text" id="identifier" name="identifier" class="form-control" placeholder="Enter username or email" required />
 
             <label for="password">Password</label>
-            <input
-                type="password"
-                id="password1"
-                name="password"
-                class="form-control"
-                placeholder="Enter Password"
-                required
-            />
+            <input type="password" id="password" name="password" class="form-control" placeholder="Enter your password" required />
 
-            <!-- Forgot password link -->
-            <div class="text-right">
-                <a href="/forgot-password" class="link-small">Forgot password?</a>
-            </div>
-
-            <button class="btn btn-primary mt-3" type="submit">Login</button>
-
-            <!-- Register now prompt -->
-            <div class="text-center mt-3">
-                <span class="text-muted">Don't have an account?</span>
-                <a href="/register" class="link-bold">Register now</a>
+            <div class="mt-3" align="center">
+                <button class="btn btn-primary" type="submit">Login</button>
             </div>
         </div>
     </form>
+    
+    <!-- Register Now Link -->
+    <div class="mt-3 text-center">
+        <p>Don't have an account? 
+            <a href="{{ url_for('auth.register_now') }}" class="register-now-link">Register Now</a>
+        </p>
+    </div>
 </div>
 {% endblock %}
