--- a/WEBSITE/website/templates/template.html
+++ b/WEBSITE/website/templates/template.html
@@ -5,12 +5,15 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <!-- import title from route -->
-  <title>{% block title %} {% endblock %}</title>
+  <title>{% block title %}{% endblock %}</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- link to external sylesheet -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" 
+
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+
+  <!-- Custom CSS -->
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
 </head>
 
@@ -27,42 +30,67 @@
         <div class="navbar-nav">
           <a class="nav-link active" aria-current="page" href="/home">Home</a>
         </div>
-          {% if user.is_authenticated %}
-          <a class="nav-link" href="/blog">Blog</a>
-          <div class="navbar-nav ms-auto">
-          <a class="nav-link" href="/logout">Logout</a>
+        {% if user.is_authenticated %}
+        <a class="nav-link" href="/blog">Blog</a>
+        <div class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Teams
+          </a>
+          <ul class="dropdown-menu">
+            <a class="dropdown-item" href="/teams/smc-mambas">SMC Mambas</a>
+            <li><a class="dropdown-item" href="/teams/team2">Team 2</a></li>
+            <li><a class="dropdown-item" href="/teams/team3">Team 3</a></li>
+          </ul>
         </div>
-          {% else %}
-          <div class="navbar-nav">
+
+        <!-- Dropdown menu -->
+        <div class="nav-item dropdown ms-auto">
+          <a class="nav-link dropdown-toggle d-flex align-items-center" href="#" role="button"
+            data-bs-toggle="dropdown">
+            {{ user.username }}
+          </a>
+          <ul class="dropdown-menu dropdown-menu-end">
+            <li><a class="dropdown-item" href="/account">Account</a></li>
+            <li>
+              <hr class="dropdown-divider">
+            </li>
+            <li><a class="dropdown-item" href="/logout">Logout</a></li>
+          </ul>
+        </div>
+        {% else %}
+        <div class="navbar-nav">
+          <a class="nav-link" href="/contact">Contact Us</a>
           <a class="nav-link" href="/login">Login</a>
           <a class="nav-link" href="/sign-up">Signup</a>
-          {% endif %}
         </div>
+        {% endif %}
       </div>
     </div>
+    </div>
   </nav>
- <!-- Flash messages -->
-{% with messages = get_flashed_messages(with_categories=True) %}
-  {% if messages %}
+
+  <!-- Main Container -->
+  <div class="container mt-4">
+
+    <!-- Flash Messages -->
+    {% with messages = get_flashed_messages(with_categories=true) %}
+    {% if messages %}
     {% for category, message in messages %}
-      {% if category == "error" %}
-        <div class="alert alert-danger alert-dismissible fade show" role="alert">
-          {{ message }}
-          <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
-        </div>
-      {% else %}
-        <div class="alert alert-success alert-dismissible fade show" role="alert">
-          {{ message }}
-          <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
-        </div>
-      {% endif %}
+    <div class="alert alert-{{ 'danger' if category == 'error' else 'success' }} alert-dismissible fade show"
+      role="alert">
+      {{ message }}
+      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
     {% endfor %}
-  {% endif %}
-{% endwith %}
-<!-- End flash messages -->
-  <!-- imports content from other html files -->
-  <div class="container">{% block content %} {% endblock %}</div>
-  <!-- import pooper and javascript -->
+    {% endif %}
+    {% endwith %}
+    <!-- End Flash Messages -->
+
+    <!-- Page Content -->
+    {% block content %}{% endblock %}
+  </div>
+
+  <!-- Bootstrap JS and Popper -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
     integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
     crossorigin="anonymous"></script>
