--- a/WEBSITE/website/templates/login.html
+++ b/WEBSITE/website/templates/login.html
@@ -11,20 +11,28 @@
     <form method="POST">
         <div class="form-group">
             <label for="identifier">Username or Email</label>
-            <input type="text" id="identifier" name="identifier" class="form-control" placeholder="Enter username or email" required />
+            <input type="text" id="identifier" name="identifier" class="form-control"
+                placeholder="Enter username or email" required />
 
             <label for="password">Password</label>
-            <input type="password" id="password" name="password" class="form-control" placeholder="Enter your password" required />
+            <input type="password" id="password" name="password" class="form-control" placeholder="Enter your password"
+                required />
+
+            <!-- Forgot password link -->
+            <div class="text-right">
+                <a href="/forgot-password" class="link-small">Forgot password?</a>
+            </div>
 
             <div class="mt-3" align="center">
                 <button class="btn btn-primary" type="submit">Login</button>
             </div>
         </div>
     </form>
-    
+
+
     <!-- Register Now Link -->
     <div class="mt-3 text-center">
-        <p>Don't have an account? 
+        <p>Don't have an account?
             <a href="{{ url_for('auth.register_now') }}" class="register-now-link">Register Now</a>
         </p>
     </div>
