--- a/WEBSITE/website/templates/posts_div.html
+++ b/WEBSITE/website/templates/posts_div.html
@@ -1,5 +1,5 @@
 <!-- page extends to template.html -->
-{% extends "template.html" %} 
+{% extends "template.html" %}
 {% block title %} Post {% endblock %}
 
 <!-- Post page content -->
@@ -10,11 +10,12 @@
     <div class="card border-dark">
         <div class="card-header d-flex justify-content-between align-items-center">
             <a href="/posts/{{ post.user.username }}">{{ post.user.username }}</a>
-            
+
             <!-- start of the delete dropdown menu -->
             {% if user.id == post.author %}
             <div class="btn-group">
-                <button type="button" class="btn btn-sm btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false"></button>
+                <button type="button" class="btn btn-sm btn-primary dropdown-toggle" data-bs-toggle="dropdown"
+                    aria-expanded="false"></button>
                 <ul class="dropdown-menu">
                     <li><a class="dropdown-item" href="/delete-post/{{ post.id }}">Delete</a></li>
                 </ul>
@@ -38,13 +39,15 @@
                     {% for comment in post.comments %}
                     <div class="d-flex justify-content-between align-items-center">
                         <div>
-                            <a href="/posts/{{ comment.user.username }}">@{{ comment.user.username }}</a>: {{ comment.text }}
-                        </div>                
+                            <a href="/posts/{{ comment.user.username }}">@{{ comment.user.username }}</a>: {{
+                            comment.text }}
+                        </div>
                         <div>
                             <small class="text-muted">{{ comment.date_created }}</small>
                             {% if user.id == comment.author or user.id == post.author %}
                             <div class="btn-group">
-                                <button type="button" class="btn btn-sm btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false"></button>
+                                <button type="button" class="btn btn-sm btn-primary dropdown-toggle"
+                                    data-bs-toggle="dropdown" aria-expanded="false"></button>
                                 <ul class="dropdown-menu">
                                     <li>
                                         <a class="dropdown-item" href="/delete-comment/{{ comment.id }}">Delete</a>
@@ -60,11 +63,11 @@
         </div>
         <p class="card-text">
             {% if post.comments|length > 0 %}
-                <a data-bs-toggle="collapse" href="#comments-{{ post.id }}" role="button">
-                    <small>View {{ post.comments|length }} Comments</small>
-                </a>
+            <a data-bs-toggle="collapse" href="#comments-{{ post.id }}" role="button">
+                <small>View {{ post.comments|length }} Comments</small>
+            </a>
             {% else %}
-                <small class="text-muted">No Comments</small>
+            <small class="text-muted">No Comments</small>
             {% endif %}
         </p>
         <!-- comment input form -->
@@ -76,7 +79,7 @@
 
         <div class="card-footer text-muted">{{ post.date_created }}</div>
     </div>
-    <br/>
+    <br />
     {% endfor %}
 </div>
 
