--- a/WEBSITE/website/templates/template.html
+++ b/WEBSITE/website/templates/template.html
@@ -31,6 +31,7 @@
         <div class="navbar-nav">
           <a class="nav-link active" href="/home">Home</a>
           <a class="nav-link" href="/store">Store</a>
+          <a class="nav-link" href="/news">News</a>
           {% if user.is_authenticated %}
           <a class="nav-link" href="/blog">Blog</a>
           <div class="nav-item dropdown">
